arquivos/registros/.bkp/20240529005230_Sismo_Pipeline.log

========================================================================
                       Iniciando do Pipeline                         
========================================================================

 Criando arquivos de backup...
 Arquivos de backup criados com sucesso!


 -------------- INICIANDO O TRATAMENTO -------------------- 
 Tratando catalogo-moho.csv...
Nenhum argumento foi passado

 -> Executando fluxo_eventos.py...
  File "/home/ggrl/projetos/ClassificadorSismologico/fonte/nucleo/fluxo_eventos.py", line 38
    except Exception as e:
    ^^^^^^
SyntaxError: invalid syntax
